--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -7,7 +7,22 @@
 //* fonts *//
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:100,300,400,500,700,900&display=swap&subset=chinese-traditional');
 
-//* base、style *//
-@import"./helps/style";
-@import"./helps/style-media";
+//* base *//
+@import"./base/base";
 
+//* components *//
+@import"./components/animated";
+@import"./components/navbar";
+@import"./components/carousel";
+@import"./components/theme";
+
+//* layout *//
+@import"./layout/header";
+@import"./layout/footer";
+
+//* pages *//
+@import"./pages/product";
+@import"./pages/login";
+@import"./pages/cart";
+@import"./pages/checkout";
+@import"./pages/success";
